@@ -1,3 +1,4 @@
+2022-08-19: [BUGFIX] Fix menu position for `StatusNotifier` for multiple monitors
 2022-08-18: [FEATURE] Add `PowerLineDecoration`
 2022-07-27: [FEATURE] Add `fill_charge` to UPower widget
 2022-07-21: [BUGFIX] Fix CurrentLayoutIcon to work with latest git version
